--- a/src/pages/conclusion.astro
+++ b/src/pages/conclusion.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Conclusion : Inégalités de santé et fractures territoriales">
-    <div class="max-w-7xl mx-auto px-6 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Inégalités de santé en France : le poids des disparités
             territoriales
@@ -23,7 +23,7 @@ import Layout from "../layouts/Layout.astro";
         </p>
     </div>
 
-    <div class="max-w-7xl mx-auto px-6 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
             <div class="space-y-6">
                 <div>
@@ -114,7 +114,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
     </div>
 
-    <div class="max-w-7xl mx-auto px-6 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12">
         <div
             class="bg-purple-50 border-2 border-purple-200 rounded-2xl p-8 lg:p-12"
         >
@@ -175,7 +175,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
     </div>
 
-    <div class="max-w-7xl mx-auto px-6 py-12">
+    <div class="text-center max-w-7xl mx-auto px-18 py-6">
         <div>
             <h3 class="text-2xl font-semibold text-purple-900 mb-4">
                 Synthèse de l'analyse
@@ -193,7 +193,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
     </div>
 
-    <div class="text-center mx-auto px-6 pb-12">
+    <div class="text-center mx-auto px-18 pb-12">
         <a
             href="https://defis.data.gouv.fr/defis/sante-et-territoires"
             class="text-sm text-blue-600 hover:text-blue-800 underline"
