--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Footer from "../components/Footer.astro";
       <div class="flex items-center justify-between h-16">
         <a href="/">
           <img
-            src="img/Logo-SAE303.svg"
+            src="/img/Logo-SAE303.svg"
             alt="Logo SAE303"
             class="h-8 w-auto hover:opacity-80 transition"
           />
