--- a/src/pages/cause-deces.astro
+++ b/src/pages/cause-deces.astro
@@ -4,7 +4,7 @@ import mortaliteData from "../assets/Taux_mortalite_maladie_2018_2022.json";
 ---
 
 <Layout title="Causes de décès : priorités de santé publique">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Taux de mortalité par type de maladie en France Métropolitaine
         </h1>
