--- a/src/pages/conclusion.astro
+++ b/src/pages/conclusion.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Conclusion : Inégalités de santé et fractures territoriales">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Inégalités de santé en France : le poids des disparités
             territoriales
