--- a/src/pages/corps-medical.astro
+++ b/src/pages/corps-medical.astro
@@ -4,7 +4,7 @@ import evolutionData from "../assets/medecins_evolution_annuelle.json";
 ---
 
 <Layout title="Corps médical : progression inégale">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Évolution du nombre de médecins accrédités en France Métropolitaine
         </h1>
