--- a/src/pages/couverture-vaccinale.astro
+++ b/src/pages/couverture-vaccinale.astro
@@ -24,7 +24,7 @@ const tauxMin = Math.min(...tauxValues);
 ---
 
 <Layout title="Vaccination : une couverture homogène">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Taux de vaccination par département en France
         </h1>
