--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import * as Plot from "@observablehq/plot";
 
 <Layout title="Santé et territoire">
   <div
-    class="grid grid-cols-1 lg:grid-cols-2 gap-12 max-w-7xl mx-auto px-18 py-12 items-center"
+    class="grid grid-cols-1 lg:grid-cols-2 gap-12 max-w-7xl mx-auto px-18 py-12 items-center pt-30"
   >
     <div>
       <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-4">
