--- a/src/pages/mortalite.astro
+++ b/src/pages/mortalite.astro
@@ -21,7 +21,7 @@ const top10Data = Array.from(causesMap, ([cause, valeurs]) => ({
 ---
 
 <Layout title="Mortalité : domination cancer-cardiovasculaire">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Top 10 des causes de décès en France Métropolitaine
         </h1>
@@ -48,11 +48,11 @@ const top10Data = Array.from(causesMap, ([cause, valeurs]) => ({
 
     <div class="text-center mx-auto px-18 mb-12">
         <a
-            href="https://www.santepubliquefrance.fr/"
+            href="https://opendata-cepidc.inserm.fr/"
             class="text-sm text-blue-600 hover:text-blue-800 underline"
             target="_blank"
         >
-            Source : Santé Publique France - Données de mortalité
+            Source : Interrogation des données sur les causes médicales de décès
         </a>
     </div>
 
