--- a/src/pages/repartition-territoriale.astro
+++ b/src/pages/repartition-territoriale.astro
@@ -11,7 +11,7 @@ const listeAnnees = [
 ---
 
 <Layout title="Répartition territoriale : fracture métropoles-rural">
-    <div class="max-w-7xl mx-auto px-18 py-12">
+    <div class="max-w-7xl mx-auto px-18 py-12 pt-30">
         <h1 class="text-4xl lg:text-5xl font-extrabold text-purple-900 mb-6">
             Nombre de médecins accrédités par département en France
             Métropolitaine
