--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Astro Basics</title>
   </head>
-  <nav class="bg-purple-900 shadow-lg sticky top-0 z-10">
+  <nav class="bg-purple-900 shadow-lg fixed top-0 left-0 right-0 z-10">
     <div class="max-w-6xl mx-auto px-6">
       <div class="flex items-center justify-between h-16">
         <a href="/">
